samples/_failures_safe/1761543706_19fa28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19c00575.c: In function ‘main’:
./samples/SAFE/__tmp_19c00575.c:130:9: error: expected declaration or statement at end of input
  130 |         printf("No input data provided.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_19c00575.c:130:9: error: expected declaration or statement at end of input
